refine template error

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 projDir:
   test: './testProj'
+  guucube: '/Users/yans/workDir/advokate-guucube-manage-midway'
   blockchain: '/Users/yans/workDir/advokate-blockchain-midway'
   point: '/Users/yans/workDir/advokate-middle-platform-midway'
   funpoints: '/Users/yans/workDir/advokate-fun-points-midway'
